--- a/index.html
+++ b/index.html
@@ -6,8 +6,153 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/9b143f3ba7.js" crossorigin="anonymous"></script>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&family=Roboto:wght@700&family=Work+Sans:wght@400;800;900&display=swap'); </style>
 </head>
 <body>
-    
+
+    <header>
+
+        <nav>
+            <div class="nav-title-div">
+                 <p class="nav-title">Influencer products</p>
+            </div>
+
+            <div class="menu-div">
+                <span class="menu">Home</span>
+                <span class="menu">Products</span>
+                <span class="menu">Sing up</span>
+                <span class="menu">Log in</span>
+                <span class="menu"><i class="fa-solid fa-magnifying-glass"></i></span>
+                <span class="menu"><i class="fa-solid fa-cart-shopping"></i></i></span>
+            </div>
+        </nav>
+
+          <section class="banner">
+              <div class="banner-blog">
+                <h1 class="banner-title">Start your Journey as 
+                    Influencer</h1>
+                    <p class="banner-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="banner-btn">Preebook now<i class="fa-thin fa-right"></i></i>
+                    </button>
+
+              </div>
+              <div class="banner-img">
+                <img src="./images/main-camera.png" alt="">
+              </div>
+          </section>
+
+          <section class="logo">
+             <div class="logo-div">
+                 <div> <img src="./logos/Alibaba.svg" alt=""></div>
+
+                 <div><img src="./logos/Amazon.svg" alt=""></div>
+
+                 <div> <img src="./logos/Daraz.pk Logo.svg" alt=""></div>
+ 
+                 <div><img src="./logos/Ebay.svg" alt=""></div>
+                
+                 <div> <img src="./logos/Rakuten.svg" alt=""></div> 
+
+                 <div> <img src="./logos/Walmart.svg" alt=""></div> 
+
+               <div><img src="./logos/Target.svg" alt=""></div> 
+            </div>
+          </section>
+    </header>
+
+    <main>
+       <section class="card">
+
+          <h1>Popular Collection</h1>
+   
+           <div class="card-container">
+            <div class="card-img"><img src="./images/tripod.png" alt=""></div>
+            <h2>Flex Tripod</h2>
+            <h3>$50.48</h3>
+            <div><span></span><span></span></div>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+           </div>
+
+           <div class="card-container">
+            <div class="card-img"><img src="./images/mic.png" alt=""></div>
+            <h2>microphone</h2>
+            <h3>$120.25</h3>
+            <div><span></span><span></span></div>
+            <p>Wordwide shifting available
+                Buyers protection possibl</p>
+           </div>
+
+           <div class="card-container">
+            <div class="card-img"><img src="./images/airpod.png" alt=""></div>
+            <h2>Airbuds</h2>
+            <h3>$100.00</h3>
+            <div><span></span><span></span></div>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+           </div>
+
+           <div class="card-container">
+            <div class="card-img"><img src="./images/drone.png" alt=""></div>
+            <h2>Drone</h2>
+            <h3>$980.25</h3>
+            <div><span></span><span></span></div>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+           </div>
+
+           <div class="card-container">
+            <div class="card-img"><img src="./images/lights.png" alt=""></div>
+            <h2>Light Setup</h2>
+            <h3>$1200.00</h3>
+            <div><span></span><span></span></div>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+           </div>
+
+           <div class="card-container">
+            <div class="card-img"><img src="./images/setup.png" alt=""></div>
+            <h2>Photoshoot set</h2>
+            <h3>$820.40</h3>
+            <div><span></span><span></span></div>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+           </div>
+
+           <div class="card-container">
+            <div class="card-img"><img src="./images/camera.png" alt=""></div>
+            <h2>Vlogging Camera</h2>
+            <h3>$1800.80</h3>
+            <div><span></span><span></span></div>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+           </div>
+
+           <div class="card-container">
+            <div class="card-img"><img src="./images/single-light.png" alt=""></div>
+            <h2>Green Screen</h2>
+            <h3>$25.48</h3>
+            <div><span></span><span></span></div>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+           </div>
+
+           <div class="card-container">
+            <div class="card-img"><img src="./images/action.png" alt=""></div>
+            <h2>Action Camera</h2>
+            <h3>$380.00</h3>>
+            <div><span></span><span></span></div>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+           </div>
+
+       </section>
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
