--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
 
-        <nav>
+        <nav> <div class="hide-menu"><i class="fa-solid fa-bars"></i> </div>
             <div class="nav-title-div">
                  <p class="nav-title">Influencer products</p>
             </div>
@@ -25,6 +25,7 @@
                 <span class="menu">Log in</span>
                 <span class="menu"><i class="fa-solid fa-magnifying-glass"></i></span>
                 <span class="menu"><i class="fa-solid fa-cart-shopping"></i></i></span>
+                 <span class="hide-menu"><i class="fa-solid fa-cart-shopping"></i></i></span>
             </div>
         </nav>
 
