--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
            </div>
           
         </div>
-        <p class="card-see-more"><a href="">see more</a></p>
+        <p class="card-see-more"><a href="">see more <i class="fa-solid fa-right-long"></i></a></p>
        </section>
 
 
